--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat
+    testthat (>= 2.1.0),
+    covr
 Imports: 
     httr,
     jsonlite,
     data.table
+RoxygenNote: 6.1.1
