--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+sudo: false
 cache: packages
+notifications:
+  email:
+    on_failure: always
+
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
