--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(get_nibrs_offender)
 export(get_nibrs_offense)
 export(get_nibrs_victim)
 export(get_police_employment)
+export(is_valid_ori)
 export(set_api_key)
