--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ cache:
 
 environment:
   NOT_CRAN: true
+  FBI_API_KEY : "dw3MIpdbpWC8AyD5naDpjXZaEgFenyiGh3y0JP1a"
   # env vars that may need to be set, at least temporarily, from time to time
   # see https://github.com/krlmlr/r-appveyor#readme for details
   # USE_RTOOLS: true
