--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fbi
-Title: R Wrapper for the FBI's Crime Data API <https://crime-data-explorer.fr.cloud.gov/api>
+Title: R Wrapper for the FBI's Crime Data API
 Version: 0.1.0
 Authors@R: 
     person(given = "Jacob",
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "jkkaplan6@gmail.com",
            comment = c(ORCID = "0000-0002-0601-0387"))
-Description: Uses the FBI's Crime Data API to get information about crime. 
+Description: Uses the FBI's Crime Data API <https://crime-data-explorer.fr.cloud.gov/api> to get information about crime. 
     This includes are from the FBI's UCR (including the 'Offenses Known
     and Clearances by Arrest', 'Arrests by Age, Sex, and Race', 'Supplement 
     to Return A', 'Law Enforcement Officers Killed and Assaulted' data sets) 
@@ -16,6 +16,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://jacobkap.github.io/fbi/
+Depends:
+    R (>= 3.5.0)
 Suggests: 
     testthat (>= 2.1.0),
     covr
