--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_estimated_crime)
 export(get_nibrs_offender)
 export(get_nibrs_offense)
 export(get_nibrs_victim)
+export(get_nibrs_victim_offences)
 export(get_police_employment)
 export(is_valid_ori)
 export(list_nibrs_offender_variables)
